# findme

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: lint.yml  pipeline.yml
findme/: __init__.py  __main__.py  config.py  exceptions.py  search.py
reports/coverage/: .coverage  coverage.xml
src/find_patterns/: __main__.py
src/findme/: search.py
src/tests/: test_config.py  test_search.py  utils.py
tests/: test_config.py  test_search.py  utils.py
