[tool.poetry]
name = "findme"
version = "0.1.0"
description = ""
authors = ["mdLafrance <maxlafrance97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.0"
typer = "^0.9.0"
appdirs = "^1.4.4"
pydantic = "^2.1.1"

[tool.poetry.scripts]
find_me = "findme.__main__:app"


[tool.poetry.group.dev.dependencies]
pyfakefs = "^5.2.3"
pytest = "^7.4.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
